tests/NormalTests/paczka1/small_fuzzy/53855284.err
Error in line 2: X8q2cCdyY4 S455 9,5
Error in line 4: gOhmNa A707 14,7
Error in line 8: gOhmNa S481 47,8
Error in line 6: jwqOW2X A707 59,7
Error in line 12: jwqOW2X S481 29,8
